--- a/views/Horror.ejs
+++ b/views/Horror.ejs
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>World Of Books</title>
 </head>
 
