--- a/views/readStories.ejs
+++ b/views/readStories.ejs
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/readStories.css">
   </head>
 
