--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="/userPage.css">
 </head>
