--- a/public/style.css
+++ b/public/style.css
@@ -708,3 +708,162 @@ label {
     grid-gap: 10%;
     margin: 6px 0 0px 0;
   }
+}
+@media only screen and (max-width:572px) {
+  h2 {
+    max-width: 90%;
+    margin: 0px 0px 208px 3%;
+    color: white;
+    font-size: 1.6rem;
+    font-weight: 600;
+    grid-column: 1/2;
+  }
+
+  h1 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    margin: 10px 0 0 3%;
+    color: white;
+    font-size: 3.0rem;
+    height: 100px;
+  }
+
+  a {
+    padding: 3px 10px;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.2rem;
+  }
+
+  .fa-book-open:before {
+    content: "\f518";
+    font-size: 1.3rem;
+    margin: 0 0 10px 0;
+  }
+
+  a {
+    padding: 12px 17px 0 0;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.2rem;
+  }
+  .right {
+      grid-column: 2/4;
+      padding: 0 0 0 0%;
+      height: 20px;
+      text-align: center;
+  }
+  .left {
+    padding: 0 0 0 0;
+    display: inline-block;
+    height: 20px;
+    text-align: center;
+    grid-template-columns: 10% 10%;
+    grid-gap: 10%;
+    margin: 6px 0 0px 0;
+  }
+}
+@media only screen and (max-width:572px) {
+.fa-book-open:before {
+    display: none;
+}
+.right {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    padding: 0 0 0 10%;
+    height: 20px;
+    text-align: center;
+    display: inline-block;
+}
+.left {
+    grid-row: 1/2;
+    padding: 0 0 0 0;
+    display: inline-block;
+    height: 20px;
+    text-align: center;
+    grid-template-columns: 10% 10%;
+    grid-gap: 10%;
+    margin: 10px 40% 0px 0;
+}
+h3 {
+    padding: 5px 0 5px 0;
+    border-bottom: 2px solid black;
+    border-bottom-width: thick;
+    border-top: 2px solid black;
+    border-top-style: ridge;
+    border-color: rgba(255, 0, 0, 0.5);
+    grid-column: 2/3;
+    text-align: center;
+    font-weight: 300;
+    font-size: 1.7rem;
+}
+}
+@media only screen and (max-width:405px) {
+  a {
+      padding: 12px 0px 0 0;
+      border-radius: 10px;
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1.2rem;
+  }
+  .right {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    padding: 0 0 0 5%;
+    height: 20px;
+    text-align: center;
+    display: inline-block;
+}
+
+}
+@media only screen and (max-width:392px) {
+  a {
+      padding: 12px 5px 0 0;
+      border-radius: 10px;
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+  }
+  .right {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    padding: 0 0 0 5%;
+    height: 20px;
+    text-align: center;
+    display: inline-block;
+}
+h2 {
+    max-width: 74%;
+    margin: 0px 0px 323px 6%;
+    color: white;
+    font-size: 1.6rem;
+    font-weight: 600;
+    grid-column: 1/3;
+}
+h1 {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    margin: 10px 0 0 6%;
+    color: white;
+    font-size: 2.5rem;
+    height: 100px;
+}
+h3 {
+    padding: 5px 0 5px 0;
+    border-bottom: 2px solid black;
+    border-bottom-width: thick;
+    border-top: 2px solid black;
+    border-top-style: ridge;
+    border-color: rgba(255, 0, 0, 0.5);
+    grid-column: 2/3;
+    text-align: center;
+    font-weight: 300;
+    font-size: 1.5rem;
+}
+}
