--- a/public/create.css
+++ b/public/create.css
@@ -20,7 +20,8 @@ body {
   background-size: cover;
   background-position: center;
 }
-h5{
+
+h5 {
   grid-column: 2/4;
   grid-row: 2/3;
   padding: 5px 0 5px 0;
@@ -36,8 +37,9 @@ h5{
   margin: 0 0 600px 25%;
   max-width: 50%;
 }
+
 .container>section {
-  background-color: rgba(2,21,37);
+  background-color: rgba(2, 21, 37);
   height: 50px;
   width: 100%;
   display: grid;
@@ -66,11 +68,13 @@ input {
   height: 200px;
   width: 70%;
 }
+
 .storyInput+span {
   margin: 0 0 0 13%;
   height: 200px;
   width: 70%;
 }
+
 a:hover {
   color: white;
   text-shadow: 0px 0px 0px red;
@@ -101,7 +105,7 @@ i {
 
 .bookWrite {
   margin: 100px 0 0 0;
-  background-color: rgba(2,21,37);
+  background-color: rgba(2, 21, 37);
   grid-column: 2/4;
   grid-row: 2/3;
   border-radius: 10px;
@@ -122,14 +126,76 @@ button {
 .fa-book-open {
   margin: 7px 0 0 5%;
 }
+
 .fa-book-open:before {
-    font-size: 2.3rem;
+  font-size: 2.3rem;
 }
-.title{
+
+.title {
+  width: 50%;
   margin: 0 0 10px 13%;
   display: inline-block;
 }
-span{
+
+span {
   font-size: 1.3rem;
   margin: 0 0 0 3%;
+}
+
+@media only screen and (max-width:360px) {
+  .fa, .fas {
+    font-weight: 900;
+    margin: 0 0 0 20%;
+}
+  .back {
+    font-size: 1.2rem;
+    margin: 0 0 0 0%;
+    grid-column: 4/5;
+}
+  .fa-book-open:before {
+    content: "\f518";
+    font-size: 1.5rem;
+    margin: 0 0 0 0;
+}
+  button {
+    margin: 20px 0 0 0;
+    height: 25px;
+    width: 30%;
+}
+  select {
+      margin: 20px 20px 0 2%;
+      width: 20%;
+      height: 25px;
+  }
+.storyInput+span {
+    margin: 0 0 0 3%;
+    height: 200px;
+    width: 70%;
+}
+  input {
+    border-radius: 5%;
+    margin: 70px 0 10px 4%;
+    height: 30px;
+    width: 50%;
+    display: block;
+  }
+
+  .title {
+    margin: 0 0 10px 4%;
+    display: inline-block;
+  }
+
+  .bookWrite {
+    margin: 100px 0 0 0;
+    background-color: rgba(2, 21, 37);
+    grid-column: 1/5;
+    grid-row: 2/3;
+    border-radius: 10px;
+  }
+
+  .storyInput {
+    margin: 0 0 0 4%;
+    height: 200px;
+    width: 90%;
+  }
 }
