--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,7 +32,7 @@
       <p>Stories:</p>
       <% for(var i=0; i<stories.length; i++) {%>
       <p><%= stories[i].title %></p>
-      <span> Likes: <%= stories[i].thumbUp %></span>
+      <span class="lhThumbUp"> Likes: <%= stories[i].thumbUp %></span>
       <span>Dislikes: <%= stories[i].thumbDown -3%></span>
       <%}%>
     </section>
@@ -40,7 +40,7 @@
        <form action="/up" enctype="multipart/form-data" method="post">
          <p>Edit:</p>
           <input type="file" name="file-to-upload">
-          <input type="submit" value="Insert Profile Picture">
+          <input type="submit" value="Profile Picture">
         </form>
   </section>
   <section class="jumboTron">
