--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -34,7 +34,7 @@
       <p>Stories:</p>
       <% for(var i=0; i<stories.length; i++) {%>
       <p><%= stories[i].title %></p>
-      <span> Likes: <%= stories[i].thumbUp %></span>
+      <span class="lhThumbUp"> Likes: <%= stories[i].thumbUp %></span>
       <span>Dislikes: <%= stories[i].thumbDown -3%></span>
       <%}%>
     </section>
