--- a/public/readStories.css
+++ b/public/readStories.css
@@ -70,7 +70,7 @@ h3 {
   color: black;
   font-size: 3rem;
   height: 55px;
-  max-width: 50%;
+  max-width: 60%;
 }
 
 li {
@@ -153,4 +153,170 @@ p {
 .story>a {
   grid-column: 2/3;
   grid-row: 2/3;
+}
+@media only screen and (max-width:1212px) {
+  .cata {
+    word-spacing: 1.9rem;
+  }
+}
+
+@media only screen and (max-width:974px) {
+  a {
+    margin: 0 0 0 0;
+    font-size: 1.2rem;
+    color: white;
+    text-decoration: none;
+  }
+  .fa-book-open:before{
+      font-size: 1.4rem;
+      margin: 0 0 0 80%;
+  }
+  .hide+p {
+    font-family: sans-serif;
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width:823px) {
+  .cata {
+    word-spacing: 1.5rem;
+  }
+
+}
+
+@media only screen and (max-width:774px) {
+  .cata {
+    word-spacing: 1.5rem;
+  }
+
+  a {
+    margin: 0 0 0 0;
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+  }
+  .hide+p {
+    font-family: sans-serif;
+    font-size: 1.2rem;
+}
+}
+
+@media only screen and (max-width:678px) {
+  .cata {
+    word-spacing: 1rem;
+  }
+
+  a {
+    margin: 0 0 0 0;
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (max-width:615px) {
+  .cata {
+    word-spacing: .8rem;
+  }
+
+  a {
+    margin: 0 0 0 0;
+    font-size: .9rem;
+    color: white;
+    text-decoration: none;
+  }
+  .hide+p {
+    font-family: sans-serif;
+    font-size: .9rem;
+}
+}
+
+@media only screen and (max-width:547px) {
+  .cata {
+    word-spacing: .8rem;
+  }
+
+  a {
+    margin: 0 0 0 0;
+    font-size: .7rem;
+    color: white;
+    text-decoration: none;
+  }
+  .hide+p {
+    font-family: sans-serif;
+    font-size: .9rem;
+}
+}
+
+@media only screen and (max-width:444px) {
+  .Title {
+    padding: 5px 0 5px 0;
+    border-bottom: 2px solid black;
+    border-bottom-width: thick;
+    border-top: 2px solid black;
+    border-top-style: ridge;
+    border-color: rgba(255, 0, 0, 0.5);
+    grid-column: 2/3;
+    text-align: center;
+    font-weight: 300;
+    color: black;
+    font-size: 1.5rem;
+}
+  section {
+    color: white;
+    grid-column: 1/4;
+    grid-row: 5/6;
+}
+  .storypost {
+    margin: 0 0 0 5%;
+    list-style: none;
+    font-size: 1.8rem;
+    word-spacing: normal;
+    height: 200px;
+}
+  .fa-thumbs-down:before {
+    font-size: 1.3rem;
+}
+  .fa-thumbs-up:before {
+    font-size: 1.3rem;
+}
+  .genre {
+    font-size: 1.3rem;
+}
+  .fa-comment-medical:before {
+  font-size: 1.2rem;
+}
+  input {
+    margin: 30px 0 0 0;
+    height: 15px;
+    width: 60%;
+}
+  .container {
+    background-image: url(/img/read.jpeg);
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
+    background-color: rgba(30, 30, 30, 0.5);
+    color: white;
+    grid-column: 1/6;
+    grid-row: 1/3;
+    height: 400px;
+  }
+
+  .cata {
+    word-spacing: .4rem;
+  }
+
+  a {
+    margin: 0 0 0 0;
+    font-size: .7rem;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (max-width:399px) {
+
 }
