--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,6 @@
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-user"></span> Add Local Account</h1>
 
     <% if (message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
@@ -33,7 +32,7 @@
             <input type="password" class="form-control" name="password">
         </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Add Local</button>
+        <button type="submit" class="btn btn-warning btn-lg">LOGIN</button>
     </form>
 
     <hr>
