--- a/public/readStories.css
+++ b/public/readStories.css
@@ -22,8 +22,8 @@ a {
 }
 
 .comment {
-  grid-row: 3/5;
-  grid-column: 1/2;
+  grid-row: 5/6;
+  grid-column: 2/3;
 }
 
 .comment>h3 {
@@ -60,6 +60,7 @@ a:hover {
 h3 {
   margin: 140px 0 0 25%;
   grid-column: 2/3;
+  grid-row: 2/3;
   padding: 5px 0 5px 2%;
   border-bottom: 2px solid black;
   border-bottom-width: thick;
@@ -155,20 +156,74 @@ p {
   grid-row: 2/3;
 }
 @media only screen and (max-width:1212px) {
-  .cata {
-    word-spacing: 1.9rem;
+  h3 {
+      margin: 140px 0 0 5%;
+      grid-column: 2/3;
+      grid-row: 2/3;
+      padding: 5px 0 5px 2%;
+      border-bottom: 2px solid black;
+      border-bottom-width: thick;
+      border-top: 2px solid black;
+      border-top-style: ridge;
+      border-color: rgba(255, 0, 0, 0.5);
+      font-weight: 600;
+      color: black;
+      font-size: 3rem;
+      height: 55px;
+      max-width: 89%;
   }
 }
 
 @media only screen and (max-width:974px) {
+  h3 {
+    margin: 140px 0 0 5%;
+    grid-column: 1/4;
+    grid-row: 2/3;
+    padding: 5px 0 5px 2%;
+    border-bottom: 2px solid black;
+    border-bottom-width: thick;
+    border-top: 2px solid black;
+    border-top-style: ridge;
+    border-color: rgba(255, 0, 0, 0.5);
+    font-weight: 600;
+    color: black;
+    font-size: 3rem;
+    height: 55px;
+    max-width: 89%;
+}
+.story {
+    overflow-y: scroll;
+    border-radius: 10px;
+    margin: 0 0 40px 0;
+    color: white;
+    background-color: rgba(2, 21, 37);
+    grid-row: 3/4;
+    grid-column: 1/4;
+    height: 300px;
+}
+.container+a {
+    margin: 10px 0 0 20%;
+    grid-row: 4/5;
+    grid-column: 1/4;
+    height: 40px;
+    max-width: 65%;
+    border-radius: 10px;
+    border-color: rgba(2, 21, 37);
+    border: 2px solid;
+    color: rgba(2, 21, 37);
+}
+  .back {
+    margin: 18px 0 0 60%;
+    grid-column: 3/4;
+}
   a {
     margin: 0 0 0 0;
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: white;
     text-decoration: none;
   }
   .fa-book-open:before{
-      font-size: 1.4rem;
+      font-size: 2rem;
       margin: 0 0 0 80%;
   }
   .hide+p {
@@ -185,6 +240,11 @@ p {
 }
 
 @media only screen and (max-width:774px) {
+  .back {
+    margin: 17px 0 0 60%;
+    grid-column: 3/4;
+    font-size: 2rem;
+}
   .cata {
     word-spacing: 1.5rem;
   }
@@ -249,6 +309,32 @@ p {
 }
 
 @media only screen and (max-width:444px) {
+  .story {
+    overflow-y: scroll;
+    border-radius: 10px;
+    margin: 0 0 40px 0;
+    color: white;
+    background-color: rgba(2, 21, 37);
+    grid-row: 3/4;
+    grid-column: 1/4;
+    height: 300px;
+}
+  h3 {
+    margin: 140px 0 0 5%;
+    grid-column: 1/4;
+    grid-row: 2/3;
+    padding: 5px 0 5px 2%;
+    border-bottom: 2px solid black;
+    border-bottom-width: thick;
+    border-top: 2px solid black;
+    border-top-style: ridge;
+    border-color: rgba(255, 0, 0, 0.5);
+    font-weight: 600;
+    color: black;
+    font-size: 3rem;
+    height: 55px;
+    max-width: 89%;
+}
   .Title {
     padding: 5px 0 5px 0;
     border-bottom: 2px solid black;
@@ -292,7 +378,6 @@ p {
     width: 60%;
 }
   .container {
-    background-image: url(/img/read.jpeg);
     background-size: cover;
     background-position: center;
     display: grid;
@@ -304,7 +389,17 @@ p {
     grid-row: 1/3;
     height: 400px;
   }
-
+  .container+a {
+      margin: 10px 0 0 20%;
+      grid-row: 4/5;
+      grid-column: 1/4;
+      height: 40px;
+      max-width: 65%;
+      border-radius: 10px;
+      border-color: rgba(2, 21, 37);
+      border: 2px solid;
+      color: rgba(2, 21, 37);
+  }
   .cata {
     word-spacing: .4rem;
   }
@@ -315,8 +410,4 @@ p {
     color: white;
     text-decoration: none;
   }
-}
-
-@media only screen and (max-width:399px) {
-
 }
