--- a/views/read.ejs
+++ b/views/read.ejs
@@ -84,9 +84,7 @@
               <button type="button" name="commentSubmit"><i class="fas fa-comment-medical commentSubmit"></i></button>
               <p class="textSent"></p>
             </form>
-            <% for(var j=stories.length-1; j<stories.length; j++) {%>
-            <p class="comment">comments: <%= stories[j].comments.length%></p>
-            <%}%>
+            <p class="comment">comments: <%= stories[i].comments.length%></p>
           </li>
         </section>
       </section>
