--- a/public/edit.css
+++ b/public/edit.css
@@ -185,3 +185,97 @@ span {
 .update {
   grid-row: 4/5;
 }
+@media only screen and (max-width:1225px) {
+  .bookWrite {
+    grid-column: 1/5;
+    grid-row: 2/4;
+    height: 500px;
+  }
+  textarea {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    height: 200px;
+    max-width: 70%;
+    margin: 0 0 0 13%;
+}
+}
+@media only screen and (max-width:581px) {
+  .fa-book-open:before {
+    font-size: 1.5rem;
+
+}
+.back>h3 {
+  font-size: 1.3rem;
+    margin: 10px 0 0 0;
+}
+.fa, .fas {
+    font-weight: 900;
+    margin: 0 0 0 20%;
+}
+  h5 {
+    grid-column: 1/4;
+    grid-row: 2/3;
+    padding: 5px 0 5px 0;
+    border-bottom: 2px solid black;
+    border-bottom-width: thick;
+    border-top: 2px solid black;
+    border-top-style: ridge;
+    border-color: rgba(255, 0, 0, 0.5);
+    text-align: center;
+    font-weight: 300;
+    color: black;
+    font-size: 2rem;
+    margin: 40px 0 650px 25%;
+    max-width: 80%;
+}
+  .bookWrite {
+    grid-column: 1/5;
+    grid-row: 2/4;
+    height: 500px;
+  }
+  .bookWrite>input {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    border-radius: 5px;
+    width: 100%;
+    margin: 50px 0 0 40%;
+}
+textarea:first-of-type {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    height: 30px;
+    max-width: 50%;
+    margin: 0 0 0 19.7%;
+}
+  textarea {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    height: 200px;
+    max-width: 70%;
+    margin: 0 0 0 20%;
+}
+}
+@media only screen and (max-width:388px) {
+  .back>h3 {
+    font-size: 1rem;
+    margin: 14px 2% 0 0;
+}
+  span {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    font-size: 1.2rem;
+    margin: 0 0 0 5%;
+}
+  .bookWrite>p+input+span {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: 1.1rem;
+    margin: 0 0 0 5%;
+}
+p {
+    margin: 50px 0 0 5%;
+    font-size: 1.2rem;
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+}
