--- a/views/Horror.ejs
+++ b/views/Horror.ejs
@@ -80,9 +80,7 @@
               <button type="button" name="commentSubmit"><i class="fas fa-comment-medical commentSubmit"></i></button>
               <p class="textSent"></p>
             </form>
-            <% for(var j=0; j<stories.length; j++) {%>
-            <p class="comment">comments: <%= stories[j].comments.length%></p>
-            <%}%>
+            <p class="comment">comments: <%= stories[i].comments.length%></p>
           </li>
         </section>
       </section>
@@ -91,6 +89,7 @@
       <%}%>
     </ul>
 
+    <span class="hide username"><%=user.local.username%></span>
 
   </section>
 </body>
