--- a/public/readStories.css
+++ b/public/readStories.css
@@ -390,11 +390,11 @@ p {
     height: 400px;
   }
   .container+a {
-      margin: 10px 0 0 20%;
+      margin: 10px 0 0 0%;
       grid-row: 4/5;
       grid-column: 1/4;
       height: 40px;
-      max-width: 65%;
+      max-width: 100%;
       border-radius: 10px;
       border-color: rgba(2, 21, 37);
       border: 2px solid;
@@ -410,4 +410,17 @@ p {
     color: white;
     text-decoration: none;
   }
+  .feedback {
+    border-radius: 10px;
+    margin: 0 0 40px 5%;
+    color: white;
+    background-color: rgba(2, 21, 37);
+    max-width: 100%;
+}
+  /* .container+a>h4 {
+    margin: 10px 0 0 5%;
+    height: 60px;
+    grid-column: 1/3;
+    max-width: 100%;
+} */
 }
