Index story display

--- a/views/Horror.ejs
+++ b/views/Horror.ejs
@@ -32,12 +32,12 @@
         <li>Comedy</li>
       </a>
 
-      <a href="/Si-Fi">
-        <li>Si-Fi</li>
+      <a href="/Sci-Fi">
+        <li>Sci-Fi</li>
       </a>
 
-      <a href="/Romantic">
-        <li>Romantic</li>
+      <a href="/Romance">
+        <li>Romance</li>
       </a>
 
       <a href="/Adventure">
