--- a/views/Romance.ejs
+++ b/views/Romance.ejs
@@ -16,7 +16,7 @@
   <title>World Of Books</title>
 </head>
 
-<body class="Romantic">
+<body class="Romance">
 
 
   <section class="containerR">
@@ -37,12 +37,12 @@
         <li>Comedy</li>
       </a>
 
-      <a href="/Si-Fi">
-        <li>Si-Fi</li>
+      <a href="/Sci-Fi">
+        <li>Sci-Fi</li>
       </a>
 
-      <a href="/Romantic">
-        <li>Romantic</li>
+      <a href="/Romance">
+        <li>Romance</li>
       </a>
 
       <a href="/Adventure">
@@ -62,7 +62,7 @@
     <h3 class="Title">Romance</h3>
     <% for(var i=0; i<stories.length; i++) {%>
       <%if(stories[i].postStory==true){%>
-    <%if(stories[i].genre==="Romantic"){%>
+    <%if(stories[i].genre==="Romance"){%>
     <ul>
       <section>
         <section class="storyBoard">
