--- a/views/creation.ejs
+++ b/views/creation.ejs
@@ -41,8 +41,8 @@
         <option value=""></option>
         <option value="Horror">Horror</option>
         <option value="Comedy">Comedy</option>
-        <option value="Si-Fi">Si-Fi</option>
-        <option value="Romantic">Romantic</option>
+        <option value="Sci-Fi">Sci-Fi</option>
+        <option value="Romance">Romance</option>
         <option value="Adventure">Adventure</option>
         <option value="Mystery">Mystery</option>
         <option value="Fan-Fiction">Fan-Fiction</option>
