--- a/public/genre.css
+++ b/public/genre.css
@@ -165,7 +165,7 @@
   grid-column: 1/2;
   grid-row: 1/2;
 }
-.Romantic {
+.Romance {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 4fr 1fr;
@@ -194,12 +194,12 @@
   grid-column: 1/2;
   grid-row: 1/2;
 }
-.Romantic>a {
+.Romance>a {
   grid-column: 1/2;
   grid-row: 1/2;
 }
 
-.Si-Fi {
+.Sci-Fi {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 4fr 1fr;
@@ -208,12 +208,12 @@
   font-family: 'Playfair Display', serif;
   margin: 0 0 0 0;
 }
-.Si-Fi>a {
+.Sci-Fi>a {
   grid-column: 1/2;
   grid-row: 1/2;
 }
 .containerS {
-  background-image: url(/img/Si-Fi.jpeg);
+  background-image: url(/img/Sci-Fi.jpeg);
   background-size: cover;
   background-position: center;
   display: grid;
