--- a/views/Sci-Fi.ejs
+++ b/views/Sci-Fi.ejs
@@ -16,7 +16,7 @@
   <title>World Of Books</title>
 </head>
 
-<body class="Si-Fi">
+<body class="Sci-Fi">
 
   <section class="containerS">
     <section>
@@ -36,12 +36,12 @@
         <li>Comedy</li>
       </a>
 
-      <a href="/Si-Fi">
-        <li>Si-Fi</li>
+      <a href="/Sci-Fi">
+        <li>Sci-Fi</li>
       </a>
 
-      <a href="/Romantic">
-        <li>Romantic</li>
+      <a href="/Romance">
+        <li>Romance</li>
       </a>
 
       <a href="/Adventure">
@@ -58,10 +58,10 @@
     </ul>
   </section>
   <section>
-    <h3 class="Title">Si-Fi</h3>
+    <h3 class="Title">Sci-Fi</h3>
     <% for(var i=0; i<stories.length; i++) {%>
       <%if(stories[i].postStory==true){%>
-    <%if(stories[i].genre==="Si-Fi"){%>
+    <%if(stories[i].genre==="Sci-Fi"){%>
     <ul>
       <section>
         <section class="storyBoard">
