Fixed Romance Page

--- a/views/Romance.ejs
+++ b/views/Romance.ejs
@@ -95,9 +95,9 @@
     </ul>
     <span class="hide username"><%=user.local.username%></span>
 
-
+    
   </section>
 </body>
-<script src="/ain.js"></script>
+<script src="/main.js"></script>
 
 </html>
